// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUnity should render world1movie 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World1Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View>
        <BackgroundImage />
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            you've reached the 1st yunity
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "textAlign": "center",
              }
            }
          >
            well done!
          </YuText>
        </AnimatedComponent>
      </View>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <BackgroundImage />,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 1st yunity
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                }
              }
            >
              well done!
            </YuText>
          </AnimatedComponent>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 1st yunity
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  }
                }
              >
                well done!
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 1st yunity",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 1st yunity",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "well done!",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "well done!",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View>
          <BackgroundImage />
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 1st yunity
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "textAlign": "center",
                }
              }
            >
              well done!
            </YuText>
          </AnimatedComponent>
        </View>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <BackgroundImage />,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 1st yunity
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  }
                }
              >
                well done!
              </YuText>
            </AnimatedComponent>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 1st yunity
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "textAlign": "center",
                    }
                  }
                >
                  well done!
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 1st yunity",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 1st yunity",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "well done!",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "well done!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`getUnity should render world2movie 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World2Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <SafeAreaView
          style={
            Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/unity/unity-2.png",
              }
            }
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </SafeAreaView>
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            you've reached the 2nd yunity!
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            that means you've unlocked the desert world
          </YuText>
        </AnimatedComponent>
      </SafeAreaView>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 2nd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the desert world
            </YuText>
          </AnimatedComponent>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/unity/unity-2.png",
              },
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 2nd yunity!
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the desert world
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 2nd yunity!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 2nd yunity!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "that means you've unlocked the desert world",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "that means you've unlocked the desert world",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SafeAreaView
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 2nd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the desert world
            </YuText>
          </AnimatedComponent>
        </SafeAreaView>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <SafeAreaView
              style={
                Object {
                  "backgroundColor": "rgb(255,255,255)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />
            </SafeAreaView>,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 2nd yunity!
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the desert world
              </YuText>
            </AnimatedComponent>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-2.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />,
              "style": Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "cover",
                "source": Object {
                  "testUri": "../../../assets/unity/unity-2.png",
                },
                "style": Object {
                  "height": 1334,
                  "width": 750,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 2nd yunity!
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  that means you've unlocked the desert world
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 2nd yunity!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 2nd yunity!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "that means you've unlocked the desert world",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "that means you've unlocked the desert world",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`getUnity should render world3movie 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World2Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <SafeAreaView
          style={
            Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/unity/unity-3.png",
              }
            }
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </SafeAreaView>
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            you've reached the 3rd yunity!
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            that means you've unlocked the mountain world
          </YuText>
        </AnimatedComponent>
      </SafeAreaView>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 3rd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the mountain world
            </YuText>
          </AnimatedComponent>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/unity/unity-3.png",
              },
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 3rd yunity!
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the mountain world
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 3rd yunity!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 3rd yunity!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "that means you've unlocked the mountain world",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "that means you've unlocked the mountain world",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SafeAreaView
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 3rd yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've unlocked the mountain world
            </YuText>
          </AnimatedComponent>
        </SafeAreaView>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <SafeAreaView
              style={
                Object {
                  "backgroundColor": "rgb(255,255,255)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-3.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />
            </SafeAreaView>,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 3rd yunity!
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've unlocked the mountain world
              </YuText>
            </AnimatedComponent>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-3.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />,
              "style": Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "cover",
                "source": Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                },
                "style": Object {
                  "height": 1334,
                  "width": 750,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 3rd yunity!
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  that means you've unlocked the mountain world
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 3rd yunity!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 3rd yunity!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "that means you've unlocked the mountain world",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "that means you've unlocked the mountain world",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`getUnity should render world4movie 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <World2Unity
    onSkip={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <SafeAreaView
          style={
            Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/unity/unity-3.png",
              }
            }
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </SafeAreaView>
        <AnimatedComponent
          style={
            Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ]
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 20,
                "marginTop": 8,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            you've reached the 4th yunity!
          </YuText>
          <YuText
            bold={false}
            style={
              Object {
                "fontSize": 14,
                "marginTop": 16,
                "paddingHorizontal": 60,
                "textAlign": "center",
              }
            }
          >
            that means you've finished all the worlds
          </YuText>
        </AnimatedComponent>
      </SafeAreaView>,
      "onPress": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>,
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 4th yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've finished all the worlds
            </YuText>
          </AnimatedComponent>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/unity/unity-3.png",
              },
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 4th yunity!
              </YuText>,
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've finished all the worlds
              </YuText>,
            ],
            "style": Array [
              Object {
                "opacity": 0,
              },
              Object {
                "bottom": 120,
                "left": 0,
                "position": "absolute",
                "width": 750,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you've reached the 4th yunity!",
                "style": Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "you've reached the 4th yunity!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": false,
                "children": "that means you've finished all the worlds",
                "style": Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "that means you've finished all the worlds",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SafeAreaView
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <SafeAreaView
            style={
              Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                }
              }
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </SafeAreaView>
          <AnimatedComponent
            style={
              Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ]
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 20,
                  "marginTop": 8,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              you've reached the 4th yunity!
            </YuText>
            <YuText
              bold={false}
              style={
                Object {
                  "fontSize": 14,
                  "marginTop": 16,
                  "paddingHorizontal": 60,
                  "textAlign": "center",
                }
              }
            >
              that means you've finished all the worlds
            </YuText>
          </AnimatedComponent>
        </SafeAreaView>,
        "onPress": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <SafeAreaView
              style={
                Object {
                  "backgroundColor": "rgb(255,255,255)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-3.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />
            </SafeAreaView>,
            <AnimatedComponent
              style={
                Array [
                  Object {
                    "opacity": 0,
                  },
                  Object {
                    "bottom": 120,
                    "left": 0,
                    "position": "absolute",
                    "width": 750,
                  },
                ]
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                you've reached the 4th yunity!
              </YuText>
              <YuText
                bold={false}
                style={
                  Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  }
                }
              >
                that means you've finished all the worlds
              </YuText>
            </AnimatedComponent>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="cover"
                source={
                  Object {
                    "testUri": "../../../assets/unity/unity-3.png",
                  }
                }
                style={
                  Object {
                    "height": 1334,
                    "width": 750,
                  }
                }
              />,
              "style": Object {
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "cover",
                "source": Object {
                  "testUri": "../../../assets/unity/unity-3.png",
                },
                "style": Object {
                  "height": 1334,
                  "width": 750,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 20,
                      "marginTop": 8,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  you've reached the 4th yunity!
                </YuText>,
                <YuText
                  bold={false}
                  style={
                    Object {
                      "fontSize": 14,
                      "marginTop": 16,
                      "paddingHorizontal": 60,
                      "textAlign": "center",
                    }
                  }
                >
                  that means you've finished all the worlds
                </YuText>,
              ],
              "style": Array [
                Object {
                  "opacity": 0,
                },
                Object {
                  "bottom": 120,
                  "left": 0,
                  "position": "absolute",
                  "width": 750,
                },
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you've reached the 4th yunity!",
                  "style": Object {
                    "fontSize": 20,
                    "marginTop": 8,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "you've reached the 4th yunity!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": false,
                  "children": "that means you've finished all the worlds",
                  "style": Object {
                    "fontSize": 14,
                    "marginTop": 16,
                    "paddingHorizontal": 60,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "that means you've finished all the worlds",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
